--- a/config.toml
+++ b/config.toml
@@ -8,6 +8,9 @@ theme = 'hugo-book'
 disablePathToLower = true
 enableGitInfo = true
 
+# Google Analytics
+googleAnalytics = 'G-RS7VTF6XG6'
+
 # Needed for mermaid/katex shortcodes
 [markup]
 [markup.goldmark.renderer]
